# LOA_Firewall

./: .dockerignore  .env.example  .env.master  Makefile  README.md  license.key  pyproject.toml  run.py  test_server_keepalive.py
aws-client-delivery/: DEPLOYMENT.md
config/: config.json  config.py
config/blacklists/: default.json
deployment/client-packages/: client_info_AWS_Test_Client.json
deployment/docker/: Dockerfile  Dockerfile.client  Dockerfile.secure  docker-compose.AWS_Test_Client.yml  docker-compose.yml
deployment/scripts/: build_binary.py  build_client_image.py  deploy.sh  setup.sh  setup_models.sh
docs/: API.md
docs/client/: CLIENT_DEPLOYMENT.md  DEPLOYMENT.md  INSTALL.md  README.md
docs/development/: README.md
examples/client/: client.py
examples/demos/: demo.py  pii_masking_demo.py  web_demo.py
integration_tests/: test_api_fixes.py  test_enhanced_logging.py  test_guards.py  test_sanitized_api.py
src/api/: api.py  service.py
src/core/: __init__.py  category_manager.py  config_manager.py  firewall.py
src/filters/: __init__.py  keyword_filter.py
src/guards/: base_guard.py  granite_guard.py  llama_guard.py
src/licensing/: __init__.py  generate_license.py  license_manager.py
src/mask/: README.md  quick_demo.py  test_categorized.py  test_credit_card_fix.py
src/musk/: __init__.py  example.py  ollama_client.py  pii_masker.py  test_two_pass.py  utils.py
tests/: attack_samples.json  firewall_test_cases.py  performance_test.py  test_api.py  test_demo.py  test_keywords_api.py  test_token_counter.py
(+2 files in other folders)
